# discord-rpc-rs

./: .gitignore  Cargo.toml
examples/: discord_presence.rs  discord_presence_subscribe.rs
src/: client.rs
src/connection/: base.rs  manager.rs
src/models/: mod.rs
